# artifacts/api-server/src/routes/admin/cards.ts
@@ -1,6 +1,7 @@
 import { Router, type IRouter } from "express";
 import {
   deleteAdminCardController,
+  exportAdminCardsController,
   getAdminCardsController,
 } from "../../controllers/admin-cards-controller.js";
 import { adminMiddleware } from "../../middleware/auth.js";
@@ -8,6 +9,7 @@ import { adminMiddleware } from "../../middleware/auth.js";
 const router: IRouter = Router();
 
 router.get("/admin/cards", adminMiddleware, getAdminCardsController);
+router.get("/admin/cards/export", adminMiddleware, exportAdminCardsController);
 router.delete("/admin/card/:id", adminMiddleware, deleteAdminCardController);
 
 export default router;
